Fix visually truncated error message in test result for awesome plugin (#180)

--- a/packages/web-awesome/src/components/TestResult/TrError/styles.scss
+++ b/packages/web-awesome/src/components/TestResult/TrError/styles.scss
@@ -128,6 +128,10 @@
   &:hover {
     background: inherit;
   }
+
+  pre {
+    white-space: pre-wrap;
+  }
 }
 
 .diff {
